# cloud-project

./: .gitattributes  .gitignore  README.md  app.py  clouds_classification.ipynb  clouds_classification.py  pyproject.toml  req.txt  requirements copy.txt  requirements.txt  setup.py
data/dataset/train/: _classes.csv
data/scraped/: predictions.csv
dataset/: README.dataset.txt  README.roboflow.txt
dataset/test/: _classes.csv
dataset/valid/: _classes.csv
models/: EfficientNetB0.keras  MobileNetV2.keras  ResNet50V2.keras  VGG16.keras
notebooks/: clouds_classification.ipynb  dev_clouds_classification.ipynb  dev_get_stellite_datas.ipynb  dev_web_sraping.ipynb  expand_dataset.ipynb  scraping.py  test.ipynb
scripts/: app.py  get_cloud_image.py  get_prediction.sh  setup_env.bat  setup_env.sh
src/cloudproject/: __init__.py  classifier.py  expand_dataset.py  scraping.py
